Add meta to index

--- a/index.html
+++ b/index.html
@@ -14,7 +14,29 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Noto+Kufi+Arabic:wght@100..900&display=swap" rel="stylesheet">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r134/three.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/vanta@latest/dist/vanta.net.min.js"></script>
-    <title>Ksar Data</title>
+    <meta name="description" content="مبادرة محلية مفتوحة المصدر لجعل البيانات العامة سهلة الفهم، شفافة، ومتاحة للجميع لاستكشافها." />
+    
+    <!-- Open Graph / Facebook / LinkedIn -->
+    <meta property="og:url" content="https://www.ksardata.com/" /> <!-- Replace with your actual URL -->
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="https://res.cloudinary.com/daeuundyc/image/upload/f_auto,q_auto/ksar-el-kebir-gate_lqfind.png" /> <!-- IMPORTANT: A full, absolute URL to your preview image -->
+
+    <!-- Tell Facebook the primary language of this page -->
+    <meta property="og:locale" content="en_US" />
+    <!-- Provide an alternate language version -->
+    <meta property="og:locale:alternate" content="ar_MA" />
+
+    <!-- Primary Language Content (English) -->
+    <meta property="og:title" content="Ksar Data - بوابة بيانات القصر الكبير" />
+    <meta property="og:description" content="مبادرة محلية مفتوحة المصدر لجعل البيانات العامة سهلة الفهم، شفافة، ومتاحة للجميع لاستكشافها." />
+    
+    <!-- Twitter Card -->
+    <!-- Note: Twitter does not support alternate locales in the same way. It will use the main og: tags. -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Ksar Data - Municipal Session Attendance" />
+    <meta name="twitter:description" content="Explore and analyze session attendance data for the Al Ksar Al Kabir municipality from 2021-2025." />
+    <meta name="twitter:image" content="https://res.cloudinary.com/daeuundyc/image/upload/f_auto,q_auto/ksar-el-kebir-gate_lqfind.png" />
+    <title>Ksar Data | قصر داتا</title>
   </head>
   <body>
     <div id="root" ></div>
