chenge Meta pict

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <!-- Open Graph / Facebook / LinkedIn -->
     <meta property="og:url" content="https://www.ksardata.com/" /> <!-- Replace with your actual URL -->
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://res.cloudinary.com/daeuundyc/image/upload/f_auto,q_auto/ksar-el-kebir-gate_lqfind.png" /> <!-- IMPORTANT: A full, absolute URL to your preview image -->
+    <meta property="og:image" content="https://res.cloudinary.com/daeuundyc/image/upload/v1755200581/meta_v2mfsi.jpg" /> <!-- IMPORTANT: A full, absolute URL to your preview image -->
 
     <!-- Tell Facebook the primary language of this page -->
     <meta property="og:locale" content="en_US" />
@@ -35,7 +35,7 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Ksar Data - Municipal Session Attendance" />
     <meta name="twitter:description" content="Explore and analyze session attendance data for the Al Ksar Al Kabir municipality from 2021-2025." />
-    <meta name="twitter:image" content="https://res.cloudinary.com/daeuundyc/image/upload/f_auto,q_auto/ksar-el-kebir-gate_lqfind.png" />
+    <meta name="twitter:image" content="https://res.cloudinary.com/daeuundyc/image/upload/v1755200581/meta_v2mfsi.jpg" />
     <title>Ksar Data | قصر داتا</title>
   </head>
   <body>
