update Meta picture size

--- a/index.html
+++ b/index.html
@@ -17,13 +17,12 @@
     <meta name="description" content="مبادرة محلية مفتوحة المصدر لجعل البيانات العامة سهلة الفهم، شفافة، ومتاحة للجميع لاستكشافها." />
     
     <!-- Open Graph / Facebook / LinkedIn -->
-    <meta property="og:url" content="https://www.ksardata.com/" /> <!-- Replace with your actual URL -->
+    <meta property="og:url" content="https://www.ksardata.com/" /> 
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://res.cloudinary.com/daeuundyc/image/upload/v1755200581/meta_v2mfsi.jpg" /> <!-- IMPORTANT: A full, absolute URL to your preview image -->
+    <meta property="og:image" content="https://res.cloudinary.com/daeuundyc/image/upload/v1755263476/meta2_b1s0cq.jpg" /> 
 
-    <!-- Tell Facebook the primary language of this page -->
     <meta property="og:locale" content="en_US" />
-    <!-- Provide an alternate language version -->
+
     <meta property="og:locale:alternate" content="ar_MA" />
 
     <!-- Primary Language Content (English) -->
@@ -31,11 +30,11 @@
     <meta property="og:description" content="مبادرة محلية مفتوحة المصدر لجعل البيانات العامة سهلة الفهم، شفافة، ومتاحة للجميع لاستكشافها." />
     
     <!-- Twitter Card -->
-    <!-- Note: Twitter does not support alternate locales in the same way. It will use the main og: tags. -->
+ 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Ksar Data - Municipal Session Attendance" />
     <meta name="twitter:description" content="Explore and analyze session attendance data for the Al Ksar Al Kabir municipality from 2021-2025." />
-    <meta name="twitter:image" content="https://res.cloudinary.com/daeuundyc/image/upload/v1755200581/meta_v2mfsi.jpg" />
+    <meta name="twitter:image" content="https://res.cloudinary.com/daeuundyc/image/upload/v1755263476/meta2_b1s0cq.jpg" />
     <title>Ksar Data | قصر داتا</title>
   </head>
   <body>
